name:                haskellet
version:             0.1.0.0
synopsis:            Simple wavelet toolbox
description:         Please see README.md
homepage:            https://github.com/archbung/haskellet#readme
license:             BSD3
license-file:        LICENSE
author:              Hizbullah Abdul Aziz
maintainer:          hizbullah.abdul@gmail.com
copyright:           2016 Hizbullah Abdul Aziz
category:            Library
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Transform,
                       Daubechies
  build-depends:       base >= 4.7 && < 5,
                       scientific >= 0.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/archbung/haskellet
